--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "byteball-witness": "git+https://github.com/byteball/byteball-witness.git",
-    "byteballcore": "git+https://github.com/byteball/byteballcore.git",
+    "obyte-witness": "git+https://github.com/byteball/obyte-witness.git",
+    "ocore": "git+https://github.com/byteball/ocore.git",
     "express": "^4.16.2",
-    "headless-byteball": "git+https://github.com/byteball/headless-byteball.git",
+    "headless-obyte": "git+https://github.com/byteball/headless-obyte.git",
     "lodash": "^4.17.11",
     "request": "^2.83.0"
   }
